<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:title="@string/drawer_menu_dashboard"
            android:id="@+id/dashboard"
            android:icon="@drawable/home_icon"/>
        <item
            android:title="@string/drawer_menu_add_restaurent"
            android:id="@+id/add_restaurent"
            android:icon="@drawable/add_icon"/>

        <item
            android:title="@string/drawer_menu_add_items"
            android:id="@+id/add_items"
            android:icon="@drawable/add_icon"/>

        <item
            android:title="@string/drawer_add_favourites"
            android:id="@+id/add_fav"
            android:icon="@drawable/favorite_icon"/>

        <item
            android:title="@string/drawer_menu_logout"
            android:id="@+id/logout"
            android:icon="@drawable/logout_icon"/>







    </group>


</menu>